@@ -24,7 +24,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.10
+Release: 0.11
 Group: System Environment/Base
 Source: ftp://wraptastic.org/pub/rpm-devel/rpm-%{rpm_version}.tar.gz
 License: GPL
@@ -578,6 +578,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Mon Feb 13 2006 Jeff Johnson <jbj@jbj.org> 4.4.5-0.11
+- popt: handle POPT_ARGFLAG_OPTIONAL correctly (#71147).
+
 * Sun Feb 12 2006 Jeff Johnson <jbj@jbj.org> 4.4.5-0.10
 - debuginfo: follow symlinks when copying source files (#149113).
 - lua: don't link -lreadline and -lhistory (#147013).
